# DistributedIntegration

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
common/: Logger.cpp  Logger.h  Protocol.h
server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
